# CS-467-Programming-Quiz

./: .gitignore  Dockerfile  README.md  REAMDE.md  cloudbuild.yaml  pyproject.toml  requirements.txt
deployment/: Dockerfile  programming_quiz_web_app-0.1.dev113+g82ac1c8-py3-none-any.whl
doc/: cloud_deployment.md  configuration.md  docker_deployment.md
emails/: quiz_assigned.mjml  quiz_complete.mjml
etc/emails/: password_reset.mjml  quiz_assigned.mjml  quiz_submitted.mjml
etc/utilities/: timezones.py
examples/: app_config.py  wsgi.py
src/programming_quiz_web_app/: __init__.py  cli.py  default_config.py  default_timezones.py  models.py  seed_data.py
src/programming_quiz_web_app/applicant/: __init__.py  routes.py
src/programming_quiz_web_app/auth/: __init__.py  forms.py  routes.py
src/programming_quiz_web_app/data/: __init__.py  cli.py  seed_data.py
src/programming_quiz_web_app/employer/: __init__.py  forms.py  routes.py
src/programming_quiz_web_app/errors/: __init__.py  handlers.py
src/programming_quiz_web_app/main/: __init__.py  auth.py  email.py  filters.py  forms.py  protected.py  routes.py  urls.py
src/programming_quiz_web_app/migrations/: script.py.mako
src/programming_quiz_web_app/migrations/versions/: 52097977a0b0_.py  63e55cc6f3f7_.py  b2fb0637c645_.py  eafa4e09b4c1_.py
src/programming_quiz_web_app/static/css/: styles.css
src/programming_quiz_web_app/templates/: base.html
src/programming_quiz_web_app/utilities/: emails.py  sanitize.py
src/programming_quiz_web_app/vite/: __init__.py  assets.py  cli.py
(+50 files in other folders)
